--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,7 +23,21 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+.loading-icon {
+  align-self: flex-end;
 
+  border: 6px solid #faf4f4; /* Light grey */
+  border-top: 6px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 5px;
+  height: 5px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
 .App-link {
   color: #61dafb;
 }
