--- a/client/src/App.css
+++ b/client/src/App.css
@@ -106,6 +106,8 @@
   padding: 10px;
   margin: 10px 0;
 height: fit-content;
+opacity: 0;
+transition: all 2s;
 
 }
 .container::after {
@@ -114,7 +116,9 @@ height: fit-content;
   display: table;
 }
 
-
+.show{
+  opacity: 1;
+}
 #stupid{
   display: inline-block;
 }
